Give tmeit deploy sa access to Jobs 2

--- a/applications/tmeit/rbac.yaml
+++ b/applications/tmeit/rbac.yaml
@@ -22,7 +22,8 @@ rules:
 - apiGroups: ["apps"]
   resources: ["deployments"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
-- apiGroups: ["jobs"]
+- apiGroups: ["batch"]
+  resources: [ "jobs" ]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 - apiGroups: ["policy"]
   resources: ["poddisruptionbudgets"]
