--- a/applications/tmeit/wait-for-migrations-rbac.yaml
+++ b/applications/tmeit/wait-for-migrations-rbac.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: gh-actions-deploy
+  name: wait-for-migrations
 rules:
 - apiGroups: ["batch"]
   resources: [ "jobs" ]
@@ -12,14 +12,14 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: gh-actions-deploy
+  name: wait-for-migrations
 subjects:
 - kind: ServiceAccount
   name: default
   namespace: tmeit
 roleRef:
   kind: Role
-  name: gh-actions-deploy
+  name: wait-for-migrations
   apiGroup: rbac.authorization.k8s.io
 
 # Note: you can test the rbac with the following command:
