--- a/applications/owntracks/ingress.yaml
+++ b/applications/owntracks/ingress.yaml
@@ -3,6 +3,12 @@ kind: Ingress
 metadata:
   name: site
   annotations:
+    # type of authentication
+    nginx.ingress.kubernetes.io/auth-type: basic
+    # name of the secret that contains the user/password definitions
+    nginx.ingress.kubernetes.io/auth-secret: basic-auth
+    # message to display with an appropriate context why the authentication is required
+    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Owntracks'
 spec:
   tls:
   - hosts:
