--- a/applications/owntracks/manifest.yaml
+++ b/applications/owntracks/manifest.yaml
@@ -32,10 +32,13 @@ spec:
       containers:
       - name: owntracks
         image: owntracks/recorder:latest
-        args: ["--http-port", "8083"]
         env:
+        - name: OTR_PORT
+          value: "0"  # disable connecting to MQTT broker
         - name: OTR_HTTPHOST
           value: "0.0.0.0"
+        - name: OTR_HTTPHOST
+          value: "8083"
         - name: OTR_LMDBSIZE
           value: "1048576000000" # 100 MiB, not sure if this is stored in memory or a PV
         - name: OTR_PRECISION
