fix owntracks port envvar

--- a/applications/owntracks/manifest.yaml
+++ b/applications/owntracks/manifest.yaml
@@ -37,7 +37,7 @@ spec:
           value: "0"  # disable connecting to MQTT broker
         - name: OTR_HTTPHOST
           value: "0.0.0.0"
-        - name: OTR_HTTPHOST
+        - name: OTR_HTTPPORT
           value: "80"
         - name: OTR_LMDBSIZE
           value: "1048576000000" # 100 MiB, not sure if this is stored in memory or a PV
