--- a/applications/owntracks/manifest.yaml
+++ b/applications/owntracks/manifest.yaml
@@ -8,7 +8,7 @@ spec:
   ports:
   - port: 80
     name: web
-    targetPort: 80
+    targetPort: 8083
   clusterIP: None
   selector:
     app: owntracks
@@ -32,14 +32,13 @@ spec:
       containers:
       - name: owntracks
         image: owntracks/recorder:latest
-        args:
-          - "--port"
-          - "0" # disable connecting to MQTT broker
-          - "--http-host"
-          - "0.0.0.0"
-          - "--http-port"
-          - "80"
         env:
+        - name: OTR_PORT
+          value: "0"  # disable connecting to MQTT broker
+        - name: OTR_HTTPHOST
+          value: "0.0.0.0"
+        - name: OTR_HTTPPORT
+          value: "8083"
         - name: OTR_LMDBSIZE
           value: "1048576000000" # 100 MiB, not sure if this is stored in memory or a PV
         - name: OTR_PRECISION
@@ -50,7 +49,7 @@ spec:
               name: geokey-secret
               key: OTR_GEOKEY
         ports:
-        - containerPort: 80
+        - containerPort: 8083
           name: web
         volumeMounts:
         - name: store
