--- a/applications/tmeit-dev-doggo/rbac.yaml
+++ b/applications/tmeit-dev-doggo/rbac.yaml
@@ -27,6 +27,18 @@ rules:
 - apiGroups: ["kubegres.reactive-tech.io"]
   resources: ["kubegres"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: ["", "extensions", "apps", "autoscaling"]
+  resources: ["*"]
+  verbs: ["*"]
+- apiGroups: ["batch"]
+  resources:
+  - jobs
+  - cronjobs
+  verbs: ["*"]
+- apiGroups: ["networking.k8s.io"]
+  resources:
+  - ingresses
+  verbs: ["*"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
