--- a/applications/bitwarden/statefulset.yaml
+++ b/applications/bitwarden/statefulset.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ports:
   - port: 8080
-    name: http
+    targetPort: 8080
   selector:
     app: bitwarden
 ---
@@ -49,6 +49,8 @@ spec:
         - name: data
           mountPath: /data
         env:
+          - name: ROCKET_ADDRESS
+            value: "0.0.0.0"
           - name: ROCKET_PORT
             value: "8080"
           - name: DOMAIN
