Switch nextcloud ingress to new nextcloud install

--- a/applications/nextcloud/nextcloud-helm-application.yaml
+++ b/applications/nextcloud/nextcloud-helm-application.yaml
@@ -25,7 +25,11 @@ spec:
         image:
           tag: 20-fpm
         ingress:
-          enabled: false
+          enabled: true
+          tls:
+            - hosts:
+              - cloud.jlh.name
+              secretName: cloud-jlh-name-tls
         nextcloud:
           host: cloud.jlh.name
           existingSecret:
