--- a/applications/smultronfeet-nu/manifest.yaml
+++ b/applications/smultronfeet-nu/manifest.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: website
         image: ghcr.io/justinlex/smultronfeet-nu:latest
+        imagePullPolicy: Always
         env:
         ports:
         - containerPort: 8080
@@ -28,6 +29,15 @@ spec:
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
+        resources:
+          requests:
+            cpu: 50m
+            memory: 10Mi
+            ephemeral-storage: 50Mi
+          limits:
+            cpu: 100m
+            memory: 100Mi
+            ephemeral-storage: 100Mi
       volumes:
         - name: cache
           emptyDir: {}
