--- a/applications/media/radarr.yaml
+++ b/applications/media/radarr.yaml
@@ -60,7 +60,7 @@ metadata:
 spec:
   storageClassName: nfs-freenas
   accessModes:
-    - ReadWriteonce
+    - ReadWriteOnce
   volumeMode: Filesystem
   resources:
     requests:
