Fix Jellyfin PVC

--- a/applications/media/jellyfin.yaml
+++ b/applications/media/jellyfin.yaml
@@ -65,3 +65,16 @@ spec:
   selector:
     app: jellyfin
   type: ClusterIP
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jellyfin-config
+spec:
+  storageClassName: nfs-freenas
+  accessModes:
+    - ReadWriteMany
+  volumeMode: Filesystem
+  resources:
+    requests:
+      storage: 5Gi
