--- a/applications/kubernetes-dashboard/ingress.yaml
+++ b/applications/kubernetes-dashboard/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: dashboard
+  annotations:
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   tls:
   - hosts:
@@ -15,9 +17,9 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: website
+            name: kubernetes-dashboard
             port:
-              number: 8080
+              number: 443
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
