Revert back from alpine

--- a/applications/nextcloud/nextcloud-helm-application.yaml
+++ b/applications/nextcloud/nextcloud-helm-application.yaml
@@ -23,7 +23,7 @@ spec:
       values: |
         replicaCount: 3
         image:
-          tag: 20-fpm-alpine
+          tag: 20-fpm
         ingress:
           enabled: true
           annotations:
