Enable startup probe on nextcloud

--- a/applications/nextcloud/nextcloud-helm-application.yaml
+++ b/applications/nextcloud/nextcloud-helm-application.yaml
@@ -70,3 +70,5 @@ spec:
           accessMode: ReadWriteMany
           nextcloudData:
             enabled: true
+        startupProbe:
+          enabled: true
