Fix aggressive livenessProbe

--- a/applications/nextcloud/nextcloud-helm-application.yaml
+++ b/applications/nextcloud/nextcloud-helm-application.yaml
@@ -70,5 +70,6 @@ spec:
           accessMode: ReadWriteMany
           nextcloudData:
             enabled: true
-        startupProbe:
-          enabled: true
+        livenessProbe:
+          initialDelaySeconds: 300
+          timeOutSeconds: 10
