--- a/applications/nextcloud/nextcloud-helm-application.yaml
+++ b/applications/nextcloud/nextcloud-helm-application.yaml
@@ -21,7 +21,7 @@ spec:
       # Having values inline here is a bit of a hack until values files are supported
       # https://github.com/argoproj/argo-cd/issues/2789
       values: |
-        replicaCount: 5
+        replicaCount: 3
         image:
           tag: 24-fpm
         ingress:
@@ -73,3 +73,10 @@ spec:
         livenessProbe:
           initialDelaySeconds: 300
           timeOutSeconds: 10
+        resources:
+          requests:
+            cpu: "1"
+            memory: "5Gi"
+          limits:
+            cpu: "4"
+            memory: "10Gi"
