--- a/applications/viktor/service.yaml
+++ b/applications/viktor/service.yaml
@@ -7,5 +7,9 @@ spec:
     app: factorio
   ports:
     - name: factorio
+      port: 34197
+      protocol: UDP
     - name: steam-discovery
+      port: 27015
+      protocol: TCP
   type: LoadBalancer
