--- a/applications/viktor/service.yaml
+++ b/applications/viktor/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: factorio
+  name: factorio-udp
 spec:
   selector:
     app: factorio
@@ -9,6 +9,16 @@ spec:
     - name: factorio
       port: 34197
       protocol: UDP
+  type: LoadBalancer
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: factorio-tcp
+spec:
+  selector:
+    app: factorio
+  ports:
     - name: steam-discovery
       port: 27015
       protocol: TCP
