Add volume to factorio deployment

--- a/applications/viktor/deployment.yaml
+++ b/applications/viktor/deployment.yaml
@@ -50,3 +50,10 @@ spec:
             - name: factorio
               containerPort: 34197
               protocol: UDP
+          volumeMounts:
+            - mountPath: "/factorio"
+              name: factorio
+        volumes:
+          - name: factorio
+            persistentVolumeClaim:
+              claimName: viktor
