--- a/applications/viktor/deployment.yaml
+++ b/applications/viktor/deployment.yaml
@@ -57,3 +57,7 @@ spec:
         - name: factorio
           persistentVolumeClaim:
             claimName: viktor
+      dnsConfig:  # Fix DNS resolution in Alpine 3.11 https://github.com/kubernetes/kubernetes/issues/64924 https://github.com/gliderlabs/docker-alpine/issues/539
+        options:
+          - name: ndots
+            value: "1"
