--- a/applications/redis-operator/manifest.yaml
+++ b/applications/redis-operator/manifest.yaml
@@ -45,7 +45,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: redisoperator
-    namespace: default
+    namespace: redis-operator
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
