--- a/applications/photoprism/manifest.yaml
+++ b/applications/photoprism/manifest.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: photoprism
-        image: photoprism/photoprism:latest
+        image: photoprism/photoprism:221118-jammy
         env:
         - name: PHOTOPRISM_DEBUG
           value: "true"
