--- a/applications/tmeit-dev-bank/rbac.yaml
+++ b/applications/tmeit-dev-bank/rbac.yaml
@@ -27,6 +27,9 @@ rules:
 - apiGroups: ["kubegres.reactive-tech.io"]
   resources: ["kubegres"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: ["databases.spotahome.com/v1"]
+  resources: ["redisfailovers"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 - apiGroups: ["", "extensions", "apps", "autoscaling"]
   resources: ["*"]
   verbs: ["*"]
