--- a/applications/nextcloud/new-database.yaml
+++ b/applications/nextcloud/new-database.yaml
@@ -3,6 +3,8 @@ kind: PostgresCluster
 metadata:
   name: crunchy-nextcloud
 spec:
+  users:
+    - name: postgres
   image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres:ubi8-15.1-0
   postgresVersion: 15
   instances:
