--- a/applications/nextcloud/secret-kubegres-passwords.yaml
+++ b/applications/nextcloud/secret-kubegres-passwords.yaml
@@ -1,3 +1,8 @@
+# DEPRECATED
+# This secret was used to generate the users in the database with Kubegres.
+# We are no longer using Kubegres, so these secrets are now just to keep track of what the passwords were for replication and nextcloud users on the existing database
+# These passwords will probably change to something managed by Crunchy Postgres Operator in the future.
+
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
