Point to argocd manifests directory

--- a/porygon_applications/argocd/argocd-install-application.yaml
+++ b/porygon_applications/argocd/argocd-install-application.yaml
@@ -13,9 +13,11 @@ spec:
   source:
     repoURL: https://github.com/argoproj/argo-cd.git
     targetRevision: release-2.6
-    path: 'manifests/install.yaml'
+    path: 'manifests/'
+    directory:
+      include: install.yaml
   destination:
     name: in-cluster
     namespace: 'argocd'
-  syncPolicy:
-    automated: {}
+#  syncPolicy:
+#    automated: {}
