Reenable argocd install autosync

--- a/porygon_applications/argocd/argocd-install-application.yaml
+++ b/porygon_applications/argocd/argocd-install-application.yaml
@@ -19,5 +19,5 @@ spec:
   destination:
     name: in-cluster
     namespace: 'argocd'
-#  syncPolicy:
-#    automated: {}
+  syncPolicy:
+    automated: {}
