--- a/porygon_applications/argocd/argocd-install-application.yaml
+++ b/porygon_applications/argocd/argocd-install-application.yaml
@@ -20,4 +20,5 @@ spec:
     name: in-cluster
     namespace: 'argocd'
   syncPolicy:
-    automated: {}
+    automated:
+      selfHeal: true  # k3s uses the manifests in /var/lib to overwrite argocd on every boot, so we need to use self-heal.
