--- a/porygon_applications/external-apps.yaml
+++ b/porygon_applications/external-apps.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bootstrap
+  name: external-apps
   namespace: argocd
   annotations:
     kubernetes.io/description: |
