--- a/porygon_applications/external_applications/nfs-subdir-provisioner.yaml
+++ b/porygon_applications/external_applications/nfs-subdir-provisioner.yaml
@@ -32,3 +32,5 @@ spec:
     namespace: 'nfs-subdir-provisioner'
   syncPolicy:
     automated: {}
+      syncOptions:
+        - CreateNamespace=true
