--- a/porygon_applications/bootstrap-app.yaml
+++ b/porygon_applications/bootstrap-app.yaml
@@ -20,4 +20,4 @@ spec:
     namespace: 'argocd'
   syncPolicy:
     automated:
-      selfHeal: true  # k3s uses the manifests in /var/lib to overwrite the bootstrap on every boot, so we need to use self-heal.
+      selfHeal: true  # This was bootstrapped by k3s with the manifests in /var/lib, k3s will use these to overwrite argocd on every boot, so we need to use self-heal.
