Activate persistent storage for z2m

--- a/porygon_applications/custom_applications/zigbee2mqtt/statefulset.yaml
+++ b/porygon_applications/custom_applications/zigbee2mqtt/statefulset.yaml
@@ -22,8 +22,8 @@ spec:
         - containerPort: 8080
           name: http
         volumeMounts:
-#        - mountPath: /app/data
-#          name: data
+        - mountPath: /app/data
+          name: data
         - mountPath: /app/data/configuration.yaml
           name: config
           subPath: configuration.yaml
@@ -38,9 +38,9 @@ spec:
             path: /api/v1/status
             port: http
       volumes:
-#      - name: data
-#        persistentVolumeClaim:
-#          claimName: data
+      - name: data
+        persistentVolumeClaim:
+          claimName: data
       - name: config
         configMap:
           name: configuration
