--- a/porygon_applications/custom_applications/zigbee2mqtt/configuration.yaml
+++ b/porygon_applications/custom_applications/zigbee2mqtt/configuration.yaml
@@ -12,6 +12,8 @@ data:
       adapter: deconz
     
     homeassistant: true
+    frontend: true
+
     permit_join: true
     
     devices: devices.yaml
