Fix readiness probe for frontend

--- a/porygon_applications/custom_applications/zigbee2mqtt/statefulset.yaml
+++ b/porygon_applications/custom_applications/zigbee2mqtt/statefulset.yaml
@@ -35,7 +35,7 @@ spec:
           name: conbee
         readinessProbe:
           httpGet:
-            path: /api/v1/status
+            path: /
             port: http
       volumes:
       - name: data
