--- a/applications/media/qbittorrent.yaml
+++ b/applications/media/qbittorrent.yaml
@@ -22,6 +22,9 @@ spec:
           - |
             sysctl -w net.ipv4.conf.all.src_valid_mark=1
             modprobe ip6_tables
+        volumeMounts:
+          - mountPath: /lib/modules
+            name: host-modules
       containers:
       - name: qbittorrent
         image: cr.hotio.dev/hotio/qbittorrent:release-4.5.2
@@ -72,6 +75,9 @@ spec:
       - name: wg-config
         secret:
           secretName: mullvad-wg-config
+      - name: host-modules
+        hostPath:
+          path: /lib/modules
 #---
 #apiVersion: v1
 #kind: Service
