--- a/applications/media/qbittorrent.yaml
+++ b/applications/media/qbittorrent.yaml
@@ -54,7 +54,7 @@ spec:
           name: downloads
         - mountPath: /config
           name: config
-        - mountPath: /root/etc/cont-init.d/02-setup-wg
+        - mountPath: /etc/cont-init.d/02-setup-wg
           name: setup-wg
           subPath: 02-setup-wg  # https://stackoverflow.com/a/39479928
         - mountPath: /config/wireguard
