--- a/applications/media/qbittorrent.yaml
+++ b/applications/media/qbittorrent.yaml
@@ -49,7 +49,7 @@ spec:
           runAsNonRoot: false
           runAsUser: 0
         volumeMounts:
-        - mountPath: /data
+        - mountPath: /app/qBittorrent/downloads
           name: downloads
         - mountPath: /config
           name: config
