--- a/applications/media/radarr.yaml
+++ b/applications/media/radarr.yaml
@@ -43,6 +43,10 @@ spec:
       - name: media
         persistentVolumeClaim:
           claimName: media
+      dnsConfig: # Fix DNS resolution in Alpine 3.11 https://github.com/kubernetes/kubernetes/issues/64924 https://github.com/gliderlabs/docker-alpine/issues/539
+        options:
+          - name: ndots
+            value: "1"
 ---
 apiVersion: v1
 kind: Service
