--- a/applications/media/radarr.yaml
+++ b/applications/media/radarr.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: radarr
-        image: linuxserver/radarr:4.2.4
+        image: lscr.io/linuxserver/radarr:4.5.1-develop
         env:
         - name: TZ
           value: "europe/stockholm"
