--- a/applications/media/prowlarr.yaml
+++ b/applications/media/prowlarr.yaml
@@ -64,3 +64,23 @@ spec:
   resources:
     requests:
       storage: 1Gi
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  annotations:
+    nginx.ingress.kubernetes.io/auth-url: "https://oauth.jlh.name/oauth2/auth"
+    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.jlh.name/oauth2/start?rd=$escaped_request_uri"
+  name: prowlarr
+spec:
+  rules:
+    - host: prowlarr.jlh.name
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: prowlarr
+                port:
+                  number: 80
