--- a/applications/argocd-install-ingress-nginx/oauth-proxy.yaml
+++ b/applications/argocd-install-ingress-nginx/oauth-proxy.yaml
@@ -59,6 +59,8 @@ spec:
                 secretKeyRef:
                   name: oauth2-proxy
                   key: oauth2_proxy_cookie_secret
+            - name: OAUTH2_PROXY_EMAIL_DOMAIN
+              value: jlh.name
           image: quay.io/oauth2-proxy/oauth2-proxy:latest
           imagePullPolicy: Always
           name: oauth2-proxy
